--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <!-- Cards Section for Searching Algorithms -->
   <div class="container text-center second-item mt-5">
     <div class="row">
-      <div class="col align-self-start">
+      <div class="col-12 col-md-4 align-self-start">
         <div class="card second-item-each bg-dark text-white">
           <div class="image">
             <img src="./images/linear.jpeg" alt="Linear Search" class="img-fluid">
@@ -120,7 +120,8 @@
           </div>
         </div>
       </div>
-      <div class="col align-self-center">
+  
+      <div class="col-12 col-md-4 align-self-center">
         <div class="card second-item-each bg-dark text-white">
           <div class="image">
             <img src="./images/binary.jpeg" alt="Binary Search" class="img-fluid">
@@ -136,7 +137,8 @@
           </div>
         </div>
       </div>
-      <div class="col align-self-end">
+  
+      <div class="col-12 col-md-4 align-self-end">
         <div class="card second-item-each bg-dark text-white">
           <div class="image">
             <img src="./images/ternary.jpeg" alt="Ternary Search" class="img-fluid">
@@ -155,7 +157,6 @@
       </div>
     </div>
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
