--- a/index.html
+++ b/index.html
@@ -104,57 +104,65 @@
   <div class="container text-center second-item mt-5">
     <div class="row">
       <div class="col-12 col-md-4 align-self-start">
-        <div class="card second-item-each bg-dark text-white">
-          <div class="image">
-            <img src="./images/linear.jpeg" alt="Linear Search" class="img-fluid">
+        <a href="linear.html" class="text-decoration-none">
+          <div class="card second-item-each bg-dark text-white">
+            <div class="image">
+              <img src="./images/linear.jpeg" alt="Linear Search" class="img-fluid">
+            </div>
+            <div class="content">
+              <h3 class="heading_card">Linear Search</h3>
+              <ul>
+                <li>Search each element in sequence.</li>
+                <li>Doesn't require sorted data.</li>
+                <li>Best for small datasets.</li>
+                <li>Time Complexity: O(n).</li>
+                <li>Space Complexity: O(1).</li>
+              </ul>
+            </div>
           </div>
-          <div class="content">
-            <h3 class="heading_card">Linear Search</h3>
-            <ul>
-              <li>Search each element in sequence.</li>
-              <li>Doesn't require sorted data.</li>
-              <li>Best for small datasets.</li>
-              <li>Time Complexity: O(n).</li>
-              <li>Space Complexity: O(1).</li>
-            </ul>
-          </div>
-        </div>
+        </a>
       </div>
+      
   
       <div class="col-12 col-md-4 align-self-center">
-        <div class="card second-item-each bg-dark text-white">
-          <div class="image">
-            <img src="./images/binary.jpeg" alt="Binary Search" class="img-fluid">
+        <a href="binary.html" class="text-decoration-none">
+          <div class="card second-item-each bg-dark text-white">
+            <div class="image">
+              <img src="./images/binary.jpeg" alt="Binary Search" class="img-fluid">
+            </div>
+            <div class="content">
+              <h3 class="heading_card">Binary Search</h3>
+              <ul>
+                <li>Searches in a sorted array by dividing the search interval in half.</li>
+                <li>Each comparison eliminates half of the remaining data.</li>
+                <li>Time Complexity: O(log n).</li>
+                <li>Space Complexity: O(1).</li>
+              </ul>
+            </div>
           </div>
-          <div class="content">
-            <h3 class="heading_card">Binary Search</h3>
-            <ul>
-              <li>Searches in a sorted array by dividing the search interval in half.</li>
-              <li>Each comparison eliminates half of the remaining data.</li>
-              <li>Time Complexity: O(log n).</li>
-              <li>Space Complexity: O(1).</li>
-            </ul>
-          </div>
-        </div>
+        </a>
       </div>
+      
   
       <div class="col-12 col-md-4 align-self-end">
-        <div class="card second-item-each bg-dark text-white">
-          <div class="image">
-            <img src="./images/ternary.jpeg" alt="Ternary Search" class="img-fluid">
+        <a href="ternary.html" class="text-decoration-none">
+          <div class="card second-item-each bg-dark text-white">
+            <div class="image">
+              <img src="./images/ternary.jpeg" alt="Ternary Search" class="img-fluid">
+            </div>
+            <div class="content">
+              <h3 class="heading_card">Ternary Search</h3>
+              <ul>
+                <li>Divides the array into three parts.</li>
+                <li>Reduces search space by two-thirds.</li>
+                <li>Less efficient than binary search in practice.</li>
+                <li>Time Complexity: O(log n base 3).</li>
+                <li>Space Complexity: O(1).</li>
+              </ul>
+            </div>
           </div>
-          <div class="content">
-            <h3 class="heading_card">Ternary Search</h3>
-            <ul>
-              <li>Divides the array into three parts.</li>
-              <li>Reduces search space by two-thirds.</li>
-              <li>Less efficient than binary search in practice.</li>
-              <li>Time Complexity: O(log n base 3).</li>
-              <li>Space Complexity: O(1).</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+        </a>
+      </div>      
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
