--- a/notations.html
+++ b/notations.html
@@ -306,15 +306,15 @@ nav ul li a:hover {
         <h2>Key Asymptotic Notations</h2>
         <div class="card">
             <h3>Big O Notation (O)</h3>
-            <p>Big O notation is used to describe the worst-case scenario for an algorithm’s performance. It tells us how the runtime or space requirement grows as the input size increases. For example, an algorithm with a time complexity of O(n) will grow linearly with the input size.</p>
+            <p>Big O notation is used to describe the worst-case scenario for an algorithm’s performance. It tells us how the runtime or space requirement grows as the input size increases.<br> For example, an algorithm with a time complexity of O(n) will grow linearly with the input size.</p>
         </div>
         <div class="card">
             <h3>Big Omega (Ω)</h3>
-            <p>Big Omega notation provides a lower bound for the performance of an algorithm. It represents the best-case scenario for the algorithm. For example, if an algorithm runs in O(n) time in the best case, it is denoted as Ω(n).</p>
+            <p>Big Omega notation provides a lower bound for the performance of an algorithm. It represents the best-case scenario for the algorithm.<br> For example, if an algorithm runs in O(n) time in the best case, it is denoted as Ω(n).</p>
         </div>
         <div class="card">
             <h3>Big Theta (θ)</h3>
-            <p>Big Theta notation is used when the algorithm has both an upper and lower bound. It provides a tight bound, meaning that the algorithm performs at that level for all sizes of input. For example, if an algorithm runs in O(n) time and Ω(n) time, it is denoted as θ(n).</p>
+            <p>Big Theta notation is used when the algorithm has both an upper and lower bound. It provides a tight bound, meaning that the algorithm performs at that level for all sizes of input.<br> For example, if an algorithm runs in O(n) time and Ω(n) time, it is denoted as θ(n).</p>
         </div>
     </section>
 
