--- a/ternary.html
+++ b/ternary.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="ternary.html"><button type="button" class="btn btn-outline-light">Ternery Search</button></a>
             </li>
+            <li class="nav-item"></li>
+              <a class="nav-link active" aria-current="page" href="notations.html"><button type="button" class="btn btn-outline-light">Notations</button></a>
+            </li>
           </ul>
           </div>
         </div>
@@ -83,6 +86,16 @@ Steps:
 - Match found at index 3.
             </pre>
         </section>
+
+        <section class="time-complexity">
+          <h3>Time Complexity:</h3>
+          <ul>
+            <li><strong>Best Case:</strong> O(1) – When the target is found at one of the split points.</li>
+            <li><strong>Average Case:</strong> O(log₃ n) – When the target is located after several ternary splits.</li>
+            <li><strong>Worst Case:</strong> O(log₃ n) – When the target is at one of the extremes of the array or not found.</li>
+          </ul>
+        </section>
+        
 
         <section class="advantages-disadvantages">
             <h3>Advantages:</h3>
